...
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_60dp"
                android:layout_margin="@dimen/space_16dp"
                android:background="@drawable/bg_rounded">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/space_40dp"
                    android:layout_height="@dimen/space_40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/spacing_middle"
                    android:background="@drawable/bg_circle_white"
                    android:padding="@dimen/spacing_control"
...
